--- a/Jupyter_Notebooks/Statistics/Bar_and_Pie_Charts.ipynb
+++ b/Jupyter_Notebooks/Statistics/Bar_and_Pie_Charts.ipynb
@@ -1,10 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "31cc0d73-9d0a-4931-9c5f-82cce38e2656",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Bar Graphs and Histograms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3a5512b0-48b1-4c66-b551-cc08400b0124",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt  # for creating the visualizations"
@@ -14,7 +32,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "ce583d94-2191-44ec-8a7f-c64081546975",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from collections import Counter  # this will make the code much easier"
@@ -24,7 +47,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "83231526-1d46-41b2-8294-bc4e35cf47c1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np  # needed for cluster (grouped) bar chart"
@@ -33,7 +61,12 @@
   {
    "cell_type": "markdown",
    "id": "d200199c-413b-4523-9b4a-0b98a7ef44bb",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Bar Graph with Known Frequencies"
    ]
@@ -41,7 +74,12 @@
   {
    "cell_type": "markdown",
    "id": "fd8499bd-57f8-4a0b-8f07-29c280e56b92",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "source": [
     "The following will produce a bar chart for the introductory example (not Example 1) in the notes in which the frequencies are already known.\n",
     "\n",
@@ -56,7 +94,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "677432f0-04a8-4a13-b83b-bb6ddb8a7859",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -91,7 +134,12 @@
   {
    "cell_type": "markdown",
    "id": "18e449e6-8ade-4c31-9fb3-25e59426955c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Clustered Bar Graph\n",
     "\n",
@@ -102,7 +150,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "86a12ad6-5d19-428c-9297-113e5f648261",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -140,7 +193,12 @@
   {
    "cell_type": "markdown",
    "id": "ebbaf861-201f-4121-ad59-4a7d4329d2af",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Horizontal Bar Graph with Known Frequencies"
    ]
@@ -149,7 +207,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "7fb97e7e-5ede-40bf-8f62-6a97c59fc1f9",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -185,7 +248,12 @@
   {
    "cell_type": "markdown",
    "id": "ff1e08aa-7e70-49c9-8575-73e6cacee5ea",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Bar Graphs with Raw Data"
    ]
@@ -193,7 +261,12 @@
   {
    "cell_type": "markdown",
    "id": "dfb442a8-d6a9-44b0-97d5-5d6aba4a0d51",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "source": [
     "You can even break longer lists across multiple new lines. **DON'T FORGET TO INCLUDE THE COMMA AT THE END OF EACH LINE** (with exception to the last item in the list).\n",
     "\n",
@@ -206,7 +279,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "64b7f019-65ab-47fa-85bf-fdd59d232956",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -247,6 +325,9 @@
    "cell_type": "markdown",
    "id": "0c0fdc5f-af51-4b99-93f2-cd91841fec0c",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": []
    },
    "source": [
@@ -259,7 +340,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "7d7f2a99-d4aa-4475-97a7-f31e8ba73690",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -306,7 +392,12 @@
   {
    "cell_type": "markdown",
    "id": "ba71127e-6209-4cfd-a4fc-890c2eb5bb12",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Stacked Bar Graph\n",
     "\n",
@@ -318,7 +409,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "07b80037-eb72-4f18-9f91-e4d8c7b9ef87",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -354,7 +450,12 @@
   {
    "cell_type": "markdown",
    "id": "1bcae291-b7c6-41a9-a1f5-b9fdc58d6eb3",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Pie Charts\n",
     "\n",
@@ -365,7 +466,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "49269a1b-0e11-4ffb-a598-14cf17c09de1",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -407,7 +513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
